cis-perf/yaml/zone1/160-ns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1100
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1101
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1102
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1103
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1103.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1104
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1104.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1105
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1105.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1106
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1106.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1107
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1107.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1108
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1108.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1109
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1109.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1110
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1110.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1111
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1111.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1112
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1112.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1113
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1113.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1114
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1114.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1115
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1115.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1116
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1116.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1117
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1117.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1118
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1118.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1119
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1119.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1120
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1120.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1121
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1121.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1122
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1122.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1123
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1123.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1124
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1124.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1125
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1125.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1126
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1126.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1127
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1127.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1128
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1128.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1129
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1129.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1130
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1130.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1131
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1131.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1132
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1132.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1133
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1133.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1134
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1134.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1135
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1135.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1136
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1136.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1137
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1137.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1138
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1138.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1139
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1139.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1140
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1140.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1141
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1141.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1142
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1142.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1143
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1143.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1144
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1144.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1145
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1145.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1146
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1146.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1147
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1147.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1148
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1148.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1149
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1149.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1150
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1150.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1151
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1151.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1152
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1152.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1153
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1153.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1154
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1154.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1155
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1155.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1156
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1156.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1157
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1157.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1158
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1158.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1159
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1159.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1160
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1160.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1161
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1161.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1162
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1162.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1163
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1163.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1164
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1164.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1165
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1165.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1166
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1166.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1167
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1167.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1168
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1168.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1169
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1169.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1170
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1170.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1171
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1171.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1172
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1172.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1173
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1173.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1174
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1174.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1175
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1175.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1176
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1176.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1177
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1177.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1178
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1178.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1179
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1179.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1180
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1180.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1181
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1181.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1182
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1182.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1183
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1183.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1184
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1184.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1185
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1185.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1186
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1186.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1187
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1187.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1188
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1188.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1189
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1189.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1190
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1190.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1191
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1191.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1192
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1192.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1193
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1193.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1194
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1194.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1195
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1195.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1196
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1196.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1197
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1197.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1198
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1198.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1199
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1199.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1200
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1200.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1201
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1201.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1202
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1202.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1203
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1203.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1204
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1204.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1205
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1205.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1206
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1206.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1207
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1207.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1208
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1208.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1209
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1209.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1210
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1210.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1211
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1211.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1212
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1212.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1213
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1213.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1214
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1214.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1215
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1215.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1216
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1216.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1217
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1217.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1218
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1218.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1219
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1219.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1220
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1220.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1221
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1221.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1222
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1222.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1223
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1223.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1224
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1224.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1225
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1225.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1226
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1226.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1227
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1227.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1228
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1228.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1229
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1229.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1230
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1230.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1231
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1231.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1232
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1232.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1233
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1233.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1234
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1234.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1235
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1235.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1236
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1236.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1237
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1237.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1238
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1238.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1239
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1239.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1240
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1240.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1241
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1241.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1242
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1242.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1243
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1243.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1244
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1244.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1245
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1245.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1246
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1246.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1247
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1247.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1248
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1248.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1249
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1249.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1250
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1250.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1251
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1251.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1252
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1252.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1253
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1253.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1254
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1254.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1255
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1255.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1256
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1256.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1257
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1257.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1258
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1258.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone1259
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone1259.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
